--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ loguru==0.7.2
 pillow==10.4.0
 watchdog==4.0.1
 win32-setctime==1.1.0
+huggingface-hub==0.21.4
+ultralytics==8.1.28
+opencv-python==4.9.0.80
