--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 colorama==0.4.6
-loguru==0.7.2
+loguru>=0.7.2
 pillow==10.4.0
 watchdog==4.0.1
 win32-setctime==1.1.0
 huggingface-hub==0.21.4
 ultralytics==8.1.28
 opencv-python==4.9.0.80
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
+fastapi>=0.109.0
+sqlmodel>=0.0.14
+pydantic>=2.6.0
+uvicorn>=0.27.0
